--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,8 +52,8 @@
     bottom: 0;
     margin-right: 20px; 
     margin-bottom: 20px;
-    height: 450px;
-    width: 20%;
+    height: 750px;
+    width: 40%;
     background-color: rgba(255, 255, 255, 1);
     border: black solid 2px;
     border-radius: 20px;
@@ -190,7 +190,7 @@
 }
 
 #chat-input {
-    width: 420px;
+    width: 500px;
     height: 50px;
     border: none;
     outline: none;
@@ -207,10 +207,20 @@
     background-color: transparent;
     border-radius: 18px;
     border: none;
+    justify-content: center;
+    align-items: center;
+    cursor : pointer;
+}
+#emoji-btn {
+    width: 38px;
+    height: 36px;
+    background-color: transparent;
+    border-radius: 18px;
+    border: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: -50px;
+    margin-left: -150px;
     cursor : pointer;
 }
 
