[ADD] Events OK, à peaufiner avec la fin des invits/membres

--- a/src/styles/group.css
+++ b/src/styles/group.css
@@ -22,7 +22,7 @@
 
 .allform {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 20px;
 
