--- a/src/styles/notif.css
+++ b/src/styles/notif.css
@@ -203,3 +203,9 @@
     font-size: 1.5em;
     margin-right: 10px;
 }
+
+.custom-link {
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+}
