:fire:[add] Ajout du front-end

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -54,14 +54,18 @@
   z-index: 999;
 }
 
+.usn{
+  user-select: none;
+}
+
 
 .titleContainer {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   font-size: 64px;
-  font-weight: bolder;
   align-items: center;
   justify-content: center;
+  width: 700px;
 }
 
 .resultContainer,
@@ -103,14 +107,7 @@
   font-family: 'Poppins', sans-serif;
 }
 
-.inputBox {
-  height: 48px;
-  width: 400px;
-  font-size: large;
-  border-radius: 8px;
-  border: 1px solid grey;
-  padding-left: 8px;
-}
+
 
 header {
   background-color: #333;
