--- a/src/styles/password.css
+++ b/src/styles/password.css
@@ -4,7 +4,7 @@
 
 .password-toggle {
     position: absolute;
-    right: 10px; /* Ajustez cette valeur selon votre besoin */
+    right: 10px;
     top: 50%;
     transform: translateY(-50%);
     border: none;
