--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,33 +1,11 @@
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
+html,body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
-  
-  html,
-  body {
     padding: 0;
     margin: 0;
-    font-family:
-      -apple-system,
-      BlinkMacSystemFont,
-      Segoe UI,
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      Fira Sans,
-      Droid Sans,
-      Helvetica Neue,
-      sans-serif;
+    font-family:'Montserrat', sans-serif;
+    background-color: var(--primary-dark);
+    overflow: hidden;
   }
   
   * {
@@ -42,26 +20,15 @@ body {
     justify-content: center;
     align-items: center;
   }
-  
-  code {
-    background: #fafafa;
-    border-radius: 5px;
-    padding: 0.75rem;
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Courier New,
-      monospace;
-  }
-  
+
   input[type='button'] {
     border: none;
-    background: cornflowerblue; 
-    color: white;
+    background: #ffc800; 
+    color: var(--white);
     padding: 12px 24px;
-    margin: 8px;
+
     font-size: 24px;
-    border-radius: 8px;
+    border-radius: 100px;
     cursor: pointer;
   }
+
