--- a/src/styles/group.css
+++ b/src/styles/group.css
@@ -8,32 +8,38 @@
     display: flex;
 }
 
+.groupPage {
+    overflow-x: hidden;
+}
+
+
+
 .inviteinmygroup {
-    background: whitesmoke;
 }
 
 .group-list {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     margin: 0 auto;
     max-width: 600px;
 }
 
 .allform {
+    overflow-x: hidden;
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: 20px;
-
+    align-items: center;
+    justify-content: center;
+    width: calc(100vw - 140px);
+    margin-top: 50px;
 }
 
 .creategroupContainer {
-    background: whitesmoke;
+    border-right: 1px solid white;
 }
 
 .group-list div {
-    background-color: #f8f9fa;
+    background-color: var(--primary-yellow);
+    color: var(--white);
     border-radius: 10px;
     box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
     padding: 20px;
@@ -47,16 +53,8 @@
 .group-list h2 {
     margin: 0;
     font-size: 1.2em;
-    color: #333;
-}
-
-.group-list button {
-    background: none;
-    border: none;
-    text-align: left;
-    display: block;
-    width: 100%;
-    padding: 0;
+    color: var(--white);
+    
 }
 
 .group-list button:focus {
@@ -65,13 +63,40 @@
 
 .divaskforjoin {
     background: green !important;
+    /* width: 170px; */
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 170px;
+    margin-top: 10px;
 }
 
 .asktojoinButton {
-    color: whitesmoke;
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: all 0.25s ease-in-out;
+    padding: 10px;
+    width: 100%;
+    color: var(--white);
 }
 
+.groupwhereiamnotin {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    width: 170px;
+    height: 170px;
+    background-color: var(--primary-yellow);
+}
+@media (max-width: 1250px) {
+    .allform {
+        flex-direction: column;
+    }
+
+    .creategroupContainer {
+        border-right: none;
+        border-bottom: 1px solid white;
+        padding-bottom: 30px;
+    }
+
+}
