--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1253,6 +1253,23 @@ overflow-y: scroll;
     gap: 10px;
     margin-bottom: 10px;
     width: 100%;
-/*     background-color: red; */
     justify-content: space-between;
+}
+
+.registerForm {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.registerbtn {
+    border: none;
+    background: #ffc800; 
+    color: var(--white);
+    padding: 10px 20px;
+    font-size: 20px;
+    border-radius: 100px;
+    cursor: pointer;
 }
